# panelmark-web

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
docs/: getting-started.md  hook-contract-web.md  hook-usage.md  interaction-coverage.md  protocol.md
examples/: fastapi_app.py  flask_app.py
panelmark_web/: __init__.py  adapters.py  keymap.py  page.py  protocol.py  renderer.py  server.py  session.py
panelmark_web/interactions/: __init__.py  _helpers.py  checkbox.py  dataclass_form.py  form_input.py  list_view.py  menu_function.py  menu_return.py  nested_menu.py  radio_list.py  status_message.py  table_view.py  textbox.py
panelmark_web/static/: client.js
panelmark_web/widgets/: __init__.py  alert.py  confirm.py  dataclass_form.py  file_picker.py  input_prompt.py  list_select.py
tests/: test_adapters.py  test_integration.py  test_interactions.py  test_page.py  test_portable_integration.py  test_renderer.py  test_server.py  test_session.py  test_widgets.py
